Rolled back to Java 1.8 to make Heroku deploy possible. Added extraction of environment variables with database credentials in Config (for Heroku). Some changes in routing (use annotations instead web.xml). Some refactoring in servlet and pages.